# byc

./: Cargo.toml  Dockerfile  README.md  formulas.md
data/: bonds.csv
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs  mod.rs
src/domain/: bond.rs  enriched_bond.rs  mod.rs
src/math/: constant.rs  mod.rs  yielder.rs
src/time/: maturity.rs  mod.rs
tests/: maturity.rs  yielder.rs
